# local-ai-orchestrator

./: .env.example  .gitignore  1_安装环境.bat  1_安装环境.command  2_启动项目.bat  2_启动项目.command  3_运行体检.bat  3_运行体检.command  4_登录ChatGPT.bat  4_登录ChatGPT.command  5_测试ChatGPT.bat  5_测试ChatGPT.command  6_测试Claude.bat  6_测试Claude.command  7_运行修复矩阵.bat  7_运行修复矩阵.command  8_运行Beta验收.bat  8_运行Beta验收.command  AGENT_RELIABILITY_SPRINT_REPORT.md  AGENT_RELIABILITY_VALIDATION_SUMMARY.md  APPLE_SILICON_ARCHITECTURE_AUDIT_REPORT.md  APPLE_SILICON_NATIVE_REBUILD_REPORT.md  ARCHIVE_HYGIENE_REPORT.md  BACKEND_BINARY_PROTOTYPE_REPORT.md  BETA_KERNEL_VALIDATION.md  BETA_VALIDATION_REPORT.md  CHANGED_FILES_MANIFEST.md  CLEANUP_PLAN_FINAL.md  DMG_INDEPENDENCE_SMOKE_REPORT.md  DMG_PREP_PLAN.md  DMG_SMOKE_REPORT.md  EXTERNAL_AI_LIVE_WORKFLOW_REPORT.md  EXTERNAL_AI_LIVE_WORKFLOW_VALIDATION_SUMMARY.md  EXTERNAL_AI_WORKSPACE_SINGLE_OWNER_REPORT.md  FINAL_ARM64_DMG_ACCEPTANCE_REPORT.md  FINAL_CLEANUP_REPORT.md  FINAL_INSTALLED_APP_ACCEPTANCE_REPORT.md  FINAL_INTEGRATION_REALTIME_UX_REPORT.md  FINAL_INTEGRATION_VALIDATION_SUMMARY.md  FINAL_LOCAL_REAL_MACHINE_ACCEPTANCE_REPORT.md  (+74 more)
backend/: main.py  provider_service.py  runtime_paths.py  settings_store.py  sidecar_entry.py
docs/: architecture.md  contract_runtime_upgrade.md  coverage_checklist.md  desktop_app.md  external_ai_workspace.md  final_blueprint.md  final_effects_coverage.md  local_model_optimization.md  product_design.md  security.md  skill_sdk.md  two_dimensional_strategy.md  web_ai_test_matrix.md
frontend/: app.js  index.html  style.css
(+245 files in other folders)
